--- a/页面压缩.md
+++ b/页面压缩.md
@@ -1,6 +1,7 @@
-- node -v
-- npm -v
-- cnpm -v
+- 查看相关软件版本
+> - node -v
+> - npm -v
+> - cnpm -v
 - npm install -g cnpm --registry=https://registry.npm.taobao.org
 - cnpm install -g gulp
 - gulp -v
@@ -13,7 +14,8 @@
     }
     ```
 - cnpm install
-- vim gulpfile.js
+- 新建gulp任务
+> - vim gulpfile.js
     ```
     var htmlmin = require('gulp-htmlmin');
     var gulp = require('gulp');
@@ -33,4 +35,4 @@
     });
 
     ```
-- gulp compress
+> - gulp compress
