--- a/页面压缩.md
+++ b/页面压缩.md
@@ -2,10 +2,13 @@
 >- node -v
 >- npm -v
 >- cnpm -v
-- npm install -g cnpm --registry=https://registry.npm.taobao.org
-- cnpm install -g gulp
-- gulp -v
-- vim package.json 
+- 更新为淘宝镜像
+>- npm install -g cnpm --registry=https://registry.npm.taobao.org
+- 安装gulp
+>- cnpm install -g gulp
+>- gulp -v
+- 安装gulp插件
+>- vim package.json 
     ```
     "devDependencies": {
         "gulp": "^3.8.8",
@@ -13,7 +16,8 @@
         "gulp-htmlmin":"*"
     }
     ```
-- cnpm install
+>- cnpm install
+
 - 新建gulp任务
 > - vim gulpfile.js
     ```
