--- a/layui/弹窗.md
+++ b/layui/弹窗.md
@@ -1,20 +1,13 @@
 ```javascript
 layer.confirm('确定要删除吗？', {
-    btn: ['确定', '取消'] //可以无限个按钮
+    btn: ['确定', '取消']
 }, function(index, layero){
     $.ajax({
-        url:'{{action('Admin\PoolController@destroyOrganizationPool')}}',
+        url:'api_url',
         data:{'id':id},
         type:'post',
         success:function (return_data) {
-            if (return_data.code == 0) {
-                layer.msg(return_data.msg, {icon: 1,time: 1500},function(){
-                    //window.location.href = '{{action('Admin\PoolController@index', ['board'=>config('pool.list.organization_pool.key')])}}';
-                    window.location.reload(true);
-                });
-            }else{
-                layer.msg(return_data.msg, {icon: 5,time: 1500});
-            }
+            console.info('success');
         }
     });
 }, function(index){
