--- a/闭包.md
+++ b/闭包.md
@@ -18,27 +18,12 @@
     }
     
     /*****************************************/
-    ;(function(){
-        var ua = navigator.userAgent.toLowerCase();
-        if(ua.indexOf('ipad') > -1 || ua.indexOf('Tablet') > -1 || ua.indexOf('Pad') > -1 || ua.indexOf('Nexus 7') > -1){
-            //pad 不跳转
-        }else if (ua.indexOf('mobile') > -1 || ua.indexOf('mobi') > -1 || ua.indexOf('android') > -1 || ua.indexOf('iphone') > -1) {
-            var path = location.pathname;
-            var redirect_url = null;
-            var hostname = location.hostname;
-            if(typeof conf.search_link != 'undefined' && hostname == conf.search_link.replace(/[\w]+:\/\//,"")){
-                redirect_url = '//'+hostname+'/m'+(path.indexOf('/') > -1 ? '' : '/' )+path;
-            }else if (path && typeof conf.wap_url != 'undefined') {
-                redirect_url = conf.wap_url + path;
-            }
+    var i = 666;
 
-            // console.log(redirect_url + location.search)
-
-            if(redirect_url){
-                //取得参数
-                var params = location.search;
-                location.href = redirect_url + params;
-            }
-        }
+    ;(function () {
+        var i = 333;
+        console.log(i); // 输出333
     })();
+
+    console.log(i); // 输出666
 ```
