--- a/npm/常用.md
+++ b/npm/常用.md
@@ -7,7 +7,11 @@
 ----
 
 - npm init --yes # 创建package.json
- 
+
+- 如果你只是想在当前项目里用 require() 加载使用，那你可以安装到本地 
+  - npm install 默认就是安装到本地的
+  
+- 如果你想要在命令行里直接使用，比如 grunt CLI，就需要安装到全局了
+
 ----
  
-- npm install 默认就是安装到本地的
