--- a/npm/常用.md
+++ b/npm/常用.md
@@ -6,7 +6,10 @@
 
 ----
 
-- npm init --yes # 创建package.json
+- 创建package.json
+  ```
+  npm init --yes
+  ```
 
 - 如果你只是想在当前项目里用 require() 加载使用，那你可以安装到本地 
   - npm install 默认就是安装到本地的
