--- a/npm/常用.md
+++ b/npm/常用.md
@@ -16,5 +16,9 @@
   
 - 如果你想要在命令行里直接使用，比如 grunt CLI，就需要安装到全局了
 
+- npm install 默认会安装 package.json 中 dependencies 和 devDependencies 里的所有模块
+
+- 如果想只安装 dependencies 中的内容
+  - npm install --production
 ----
  
