--- a/npm/常用.md
+++ b/npm/常用.md
@@ -20,5 +20,12 @@
 
 - 如果想只安装 dependencies 中的内容
   - npm install --production
+  
+- 安装指定版本
+ ```
+ $ npm install sax@latest
+ $ npm install sax@0.1.1
+ $ npm install sax@">=0.1.0 <0.2.0"
+ ```
 ----
  
