--- a/npm/常用.md
+++ b/npm/常用.md
@@ -22,11 +22,11 @@
   - npm install --production
 
 - 将这个包名及对应的版本添加到 package.json的 dependencies
-  - npm install <package_name> --save-dev
+  - npm install <package_name> --save
   
-- 如果想只安装 dependencies 中的内容
-  - npm install --production  
-  
+- 将这个包名及对应的版本添加到 package.json的 devDependencies
+  - npm install <package_name> --save-dev
+  
 - 安装指定版本
   ```
   $ npm install sax@latest
