--- a/npm/常用.md
+++ b/npm/常用.md
@@ -1,15 +1,9 @@
-- npm install npm@latest -g
-```
- <packageName>@<version>
- -g 代表全局安装
-```
-
-----
-
 - 创建package.json
   ```
   npm init --yes
   ```
+  
+----
 
 - 如果你只是想在当前项目里用 require() 加载使用，那你可以安装到本地 
   - npm install 默认就是安装到本地的
@@ -26,7 +20,12 @@
   
 - 将这个包名及对应的版本添加到 package.json的 devDependencies
   - npm install <package_name> --save-dev
-  
+
+- 全局安装
+  ```
+  npm install npm@latest -g
+  ```
+  
 - 安装指定版本
   ```
   $ npm install sax@latest
