--- a/npm/常用.md
+++ b/npm/常用.md
@@ -9,8 +9,6 @@
 
 - 如果你只是想在当前项目里用 require() 加载使用，那你可以安装到本地 
   - npm install 默认就是安装到本地的
-  
-- 如果你想要在命令行里直接使用，比如 grunt CLI，就需要安装到全局了
 
 - npm install 默认会安装 package.json 中 dependencies 和 devDependencies 里的所有模块
 
@@ -23,8 +21,8 @@
 - 将这个包名及对应的版本添加到 package.json的 devDependencies
   - npm install <package_name> --save-dev
 
-- 全局安装
-  ```
+- 全局安装（在命令行里直接使用，比如 grunt CLI）
+  ```
   npm install npm@latest -g
   ```
   
