--- a/npm/常用.md
+++ b/npm/常用.md
@@ -11,11 +11,8 @@
   ```
   npm install npm@latest -g
   ```
-  
-- 如果你只是想在当前项目里用 require() 加载使用，那你可以安装到本地 
-  - npm install 默认就是安装到本地的
 
-- npm install 默认会安装 package.json 中 dependencies 和 devDependencies 里的所有模块
+- npm install 默认安装到本地，会安装在 package.json 中 dependencies 和 devDependencies 里的所有模块
 
 - 如果想只安装 dependencies 中的内容
   - npm install --production
