--- a/npm/常用.md
+++ b/npm/常用.md
@@ -15,6 +15,8 @@
 - npm install 默认安装到本地，会安装在 package.json 中 dependencies 和 devDependencies 里的所有模块
   
   ```
+  $ npm install mysql
+  $ npm install mongoose
   $ npm install sax@latest
   $ npm install sax@0.1.1
   $ npm install sax@">=0.1.0 <0.2.0"
