--- a/npm/常用.md
+++ b/npm/常用.md
@@ -32,7 +32,12 @@
   - npm install <package_name> --save-dev
 
 ----
+- 更新npm
 
+    ```
+    npm install npm -g
+    ```
+    
 - 查看依赖的包是否有新版本
     - npm outdated
 - 更新指定包 
