--- a/npm/常用.md
+++ b/npm/常用.md
@@ -39,8 +39,19 @@
     ```
     
 - 查看依赖的包是否有新版本
-    - npm outdated
+
+    ```
+    npm outdated
+    ```
+    
 - 更新指定包 
-    - npm update mysql
+
+    ```
+    npm update mysql
+    ```
+    
 - 更新所有
-    - npm update
+    
+    ```
+    npm update
+    ```
