--- a/npm/常用.md
+++ b/npm/常用.md
@@ -55,3 +55,9 @@
     ```
     npm update
     ```
+- 改变npm-cache 的目录
+
+    ```
+    npm config get cache
+    npm config set cache "e:\cache\npm\npm-cache"
+    ```
