--- a/npm/常用.md
+++ b/npm/常用.md
@@ -10,7 +10,9 @@
   
   ```
   npm install npm@latest -g
-  ```
+  
+  npm uninstall -g <package> #卸载
+  ```
 
 - npm install 默认安装到本地，会安装在 package.json 中 dependencies 和 devDependencies 里的所有模块
   
