--- a/npm/常用.md
+++ b/npm/常用.md
@@ -63,3 +63,8 @@
     npm config get cache
     npm config set cache "e:\cache\npm\npm-cache"
     ```
+- 查看指定包的信息
+
+    ```
+    npm info mysql 
+    ```
