--- a/layui/弹窗.md
+++ b/layui/弹窗.md
@@ -13,4 +13,14 @@ layer.confirm('确定要删除吗？', {
 }, function(index){
     console.info('cancel');
 });
+
+layer.open({
+    title: '添加股票别名',
+    area: ['500px', '300px'],
+    content: '<div>内容</div>',
+    btn: ['确定', '取消'],
+    yes: function(index, layero){
+        submit();
+    }
+});
 ```
