--- a/layui/弹窗.md
+++ b/layui/弹窗.md
@@ -14,6 +14,16 @@ layer.confirm('确定要删除吗？', {
     console.info('cancel');
 });
 
+layer.confirm('is not?', function(index){
+  //do something
+  
+  layer.close(index);
+});   
+
+
+```
+
+```js
 layer.open({
     title: '添加股票别名',
     area: ['500px', '300px'],
@@ -23,4 +33,16 @@ layer.open({
         submit();
     }
 });
+```
+
+```js
+layer.alert('只想简单的提示');        
+
+layer.alert('加了个图标', {icon: 1}); //这时如果你也还想执行yes回调，可以放在第三个参数中。
+
+layer.alert('有了回调', function(index){
+  //do something
+  
+  layer.close(index);
+});       
 ```
