--- a/layui/弹窗.md
+++ b/layui/弹窗.md
@@ -1,6 +1,6 @@
 ```javascript
 
-layer.confirm('is not?', function(index){
+layer.confirm('is not?', {icon: 3, title:'提示'}, function(index){
   //do something
   
   layer.close(index);
