--- a/layui/弹窗.md
+++ b/layui/弹窗.md
@@ -47,3 +47,20 @@ layer.alert('有了回调', function(index){
   layer.close(index);
 });       
 ```
+
+```js
+layer.msg('只想弱弱提示');
+
+layer.msg('有表情地提示', {icon: 6}); 
+
+layer.msg('关闭后想做些什么', function(){
+  //do something
+}); 
+
+layer.msg('同上', {
+  icon: 1,
+  time: 2000 //2秒关闭（如果不配置，默认是3秒）
+}, function(){
+  //do something
+});   
+```
