--- a/layui/弹窗.md
+++ b/layui/弹窗.md
@@ -64,3 +64,16 @@ layer.msg('同上', {
   //do something
 });   
 ```
+
+```js
+layer.tips('只想提示地精准些', '#id');
+
+$('#id').on('click', function(){
+  var that = this;
+  layer.tips('只想提示地精准些', that); //在元素的事件回调体中，follow直接赋予this即可
+});
+
+layer.tips('在上面', '#id', {
+  tips: 1
+});
+```
