--- a/函数对象.md
+++ b/函数对象.md
@@ -1,6 +1,7 @@
 ### [文档](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function)
 
 ```js
+    // <a class="apple" data-hello-world="aaa">Apple</a>
     var handle = {
         'test' : function (){
             var str = $(".apple").data();
@@ -16,9 +17,21 @@
     var fn = new Function("arg1", "arg2", "return arg1 * arg2;");
     var ss = fn(2, 3);   //6
     console.log(ss)    
+    
+    /*****************************************************************/
+    var callback_test = function(cb) {
+        cb('wait...', 'done...');
+    }
+
+    callback_test(function (str1, str2, str3) { // 传递第三个参数也不会报错
+        console.log(str1);
+        console.log(str2);
+        console.log(str3);
+    })
+    
     /*****************************************************************/
     
-     var tt = function () {
+    var tt = function () {
         this.aa();
     }
 
