--- a/函数对象.md
+++ b/函数对象.md
@@ -32,11 +32,11 @@
     /*****************************************************************/
     
     var tt = function () {
-        this.aa();
-    }
+        this.aa(); // 本身调用
+    }
 
-    tt.prototype.aa = function () {
-        console.info('aa')
+    tt.prototype.aa = function () {// 一定要new出来使用
+        console.info('aa')
     }
     tt.prototype.bb = function () {
         console.info('bb')
