--- a/函数对象.md
+++ b/函数对象.md
@@ -1,6 +1,51 @@
 ### [>> 文档](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function)
 
 ```js
+    // 函数新写法
+    (function (arg1, arg2) {
+        console.log(arg1)
+        console.log(arg2)
+    })(1, 2);
+
+    ;((arg1, arg2)=> {
+        console.log(arg1)
+        console.log(arg2)
+    })(1,2);
+
+    //---------
+
+    var obj = {
+        foo : function () {
+            console.log('foo')
+        },
+        bar : function () {
+            console.log('bar')
+        }
+    };
+
+    obj.foo();
+    obj.bar();
+
+    //---------
+    var obj = (width) => {
+        console.log('common');
+        return {
+            foo: (height) => {
+                    console.log('width:' + width);
+                console.log('height:' + height);
+            },
+            bar: () => {
+                console.log('bar');
+            }
+        };
+    };
+
+    obj();
+    obj(3).foo(4);
+    obj(3).bar();
+    
+    /*****************************************************************/
+    
     // <a class="apple" data-hello-world="aaa">Apple</a>
     var handle = {
         'test' : function (){
