--- a/函数对象.md
+++ b/函数对象.md
@@ -27,6 +27,24 @@
     obj.bar();
 
     //---------
+    
+    var obj = () => {
+    
+        return {
+            foo: () => {
+                console.log('foo');  
+            },
+            bar: () => {
+                console.log('bar');
+            }
+        };
+    };
+
+    obj().foo();
+    obj().bar();
+
+    //---------
+    
     var obj = (width) => {
         console.log('common');
         return {
@@ -43,6 +61,8 @@
     obj();
     obj(3).foo(4);
     obj(3).bar();
+    
+    
     
     /*****************************************************************/
     
