--- a/数组&对象.md
+++ b/数组&对象.md
@@ -11,4 +11,7 @@
     console.log(arr[0]);
     console.log(json['person1'].name);
     console.log(json['person1']['name']);
+    
+    // push元素
+    arr.push({'name': 'meinvbingyue', 'age': 30});
 ```
