--- a/函数回调.md
+++ b/函数回调.md
@@ -12,3 +12,37 @@ run(1, function(arg1){
 });
 
 ```
+
+```js
+/********************************************************************
+ * 如果传递的是具体的值，那么调用者只能被动接受定义函数所返回的值，
+ * 不能进行后续操作
+ */
+// 定义
+var handle = {
+    'getUserName': function (param) {
+        console.log(param);
+    }
+}
+
+// 使用
+handle.getUserName('meinvbingyue');
+
+/********************************************************************
+ * 定义回调函数的好处是
+ * 有时候在定义函数内获取到的值，想在调用函数中对值进行后续的操作
+ * 
+ */
+// 定义
+var handle = {
+    'getUserName': function (cb) {
+        name = 'meinvbingyue'
+        cb(null, name)
+    }
+}
+
+// 使用
+handle.getUserName((err, name) => {
+    console.log(name)
+});
+```
