--- a/函数回调.md
+++ b/函数回调.md
@@ -14,6 +14,8 @@ run(1, function(arg1){
 ```
 
 ```js
+
+//------传统函数
 /**
  * 如果传递的是具体的值，那么调用者只能被动接受定义函数所返回的值，
  * 不能进行后续操作
@@ -28,6 +30,7 @@ var handle = {
 // 使用
 handle.getUserName('meinvbingyue');
 
+//------回调函数
 /**
  * 定义回调函数的好处是
  * 有时候在定义函数内获取到的值，想在调用函数中对值进行后续的操作
