--- a/layui/弹窗.md
+++ b/layui/弹窗.md
@@ -32,7 +32,11 @@ layer.open({
     btn: ['确定', '取消'],
     yes: function(index, layero){
         submit();
-    }
+        
+        // 关闭提示窗
+	      layer.close(index);
+    }，
+    btn2: function(index, layero){}
 });
 ```
 
@@ -52,6 +56,8 @@ layer.alert('有了回调', function(index){
 layer.msg('只想弱弱提示');
 
 layer.msg('有表情地提示', {icon: 6}); 
+
+layer.msg('2秒后消失！！', {icon: 5,time: 2000});
 
 layer.msg('关闭后想做些什么', function(){
   //do something
