--- a/JQuery/表单---提交&&数据打包处理.md
+++ b/JQuery/表单---提交&&数据打包处理.md
@@ -1,3 +1,4 @@
+```html
 <html>
     
     <head>
@@ -82,7 +83,7 @@
                 $.each(fields,
                 function(i, field) {
 					if(field.name=='txtname' && field.value==''){
-						alert("用户名不能为空！");
+						alert("脫脙禄搂脙没虏禄脛脺脦陋驴脮拢隆");
 						$("#"+field.name).focus();
 						return false;
 					}
@@ -93,3 +94,4 @@
     </body>
 
 </html>
+```
