--- a/JQuery/表单---回车提交.md
+++ b/JQuery/表单---回车提交.md
@@ -1,3 +1,20 @@
+```html
+$("body").bind('keyup',function(event) {
+if(event.keyCode==13){
+document.form.submit();
+}
+});
+
+<body onkeyup="autosubmit()">//添加监听事件
+function autosubmit(){//事件触发函数
+  if(event.keyCode==13){
+     document.form.submit();
+  }
+}
+```
+
+----
+
 ```js
 //  $("#comment_space").on("click","#btn_reply",function(){    -->comment_space可以是已加载到页面的某个容器
 
